@@ -1,3 +1,12 @@
+2011-07-21  Phil Muldoon  <pmuldoon@redhat.com>
+            Tom Tromey  <tromey@redhat.com>
+
+	* top.c (set_prompt): Rewrite to free previous prompt, free
+	asynch_new_prompt and set both on new prompts.
+	* event-top.c (display_gdb_prompt): Add prompt substitution
+	logic.
+	* python/python.c (before_prompt_hook): New function.
+
 2011-07-20  Matt Rice  <ratmice@gmail.com>
 
 	* bfin-tdep.c (bfin_extract_return_value): Fix swapped
